--- a/layouts/partials/quiz.html
+++ b/layouts/partials/quiz.html
@@ -35,7 +35,7 @@
 
       <!-- Question 3: Previous Therapy -->
       <div class="quiz__question" data-question="3" style="display: none;">
-        <h3 class="quiz__question-text">Обращались ли вы ранее к психологу или психотерапевту?</h3>
+        <h3 class="quiz__question-text">Обращались ли вы ранее к психологу?</h3>
         <div class="quiz__answers">
           <button class="quiz__answer" data-answer="never">Нет, это будет первый раз</button>
           <button class="quiz__answer" data-answer="yes_no_help">Да, но не помогло</button>
