--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -7,7 +7,7 @@
         {{ $image := resources.Get "images/psychologist-portrait.jpg" }}
         {{ if $image }}
         {{ $resized := $image.Fit "400x400" }}
-        <img src="{{ $resized.RelPermalink }}" alt="Психолог-психотерапевт на онлайн сессии — работа с клиентами"
+        <img src="{{ $resized.RelPermalink }}" alt="Клинический психолог на онлайн сессии — работа с клиентами"
           class="about__photo" width="{{ $resized.Width }}" height="{{ $resized.Height }}">
         {{ end }}
       </div>
